# uframe

./: .buildinfo  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  example.html  generation.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  requirements_dev.txt  search.html  searchindex.js  setup.cfg  setup.py  tox.ini  uframe.html  uframeinstance.html
.doctrees/: environment.pickle  example.doctree  generation.doctree  index.doctree  installation.doctree  uframe.doctree  uframeinstance.doctree
.github/: ISSUE_TEMPLATE.md
.github/workflows/: codecov.yml  documentation.yml  draft-pdf.yml  tests.yml
JOSS/: paper.bib  paper.md
_modules/: index.html
_modules/uframe/: uframe.html  uframe_from_mice.html  uframe_instance.html
_sources/: example.rst.txt  index.rst.txt  uframe.rst.txt  uframeinstance.rst.txt
docs/: Makefile  conf.py  example.rst  index.rst  installation.rst  make.bat  uframe.rst  uframeinstance.rst  usage.rst
docs/builddir/: .buildinfo  generation.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  uframe.html  uframeinstance.html
docs/builddir/.doctrees/: Generation_modul.doctree  environment.pickle  generation.doctree  index.doctree  uframe.doctree  uframe_instance.doctree  uframeinstance.doctree
docs/builddir/.doctrees/Neuer Ordner/: uframe.doctree
docs/builddir/_modules/: index.html
docs/builddir/_modules/uframe/: uframe.html  uframe_from_mice.html  uframe_instance.html  utils.html
docs/builddir/_sources/: Generation_modul.rst.txt  generation.rst.txt  uframe.rst.txt  uframe_instance.rst.txt
src/uframe/: __init__.py  helper.py  uframe.py  uframe_from_mice.py  uframe_instance.py  utils.py
tests/: __init__.py  test_uframe.py  test_uframe_instance.py
uframe/: __init__.py  uframe.py  uframe_instance.py
