
[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.mypy]
mypy_path = "uframe"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true


[project]
name = "uframe"
version = "0.0.23"
authors = [
  { name="Christian Amesoder", email="christian.amesoeder@informatik.uni-regensburg.de" },
  { name="Michael Hagn", email="michael.hagn@stud.uni-regensburg.de" }
]
description = "Package for handling uncertain data"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  'scipy >= 1.9.3',
  'scikit-learn >= 1.2.0',
  'numpy >= 1.23.5',
  'matplotlib',
  'miceforest',
]

[project.optional-dependencies]
tests = [
  'pytest-cov ',
  'pytest >= 7.3.1 ',
  'coverage>=4.5.4',
  'tox >=3.14.0',
  'flake8>=3.7.8',
  'wheel>=0.33.6',
  'pip>=19.2.3',

]

[project.urls]
"Homepage" = "https://github.com/URWI2/uframe"
