[metadata]
name = uframe
description = Data frames for uncertain data 
author = Christian Amesoeder and Michael Hagn
version = 0.0.8

[options]
packages =
    uframe
install_requires =
    requests>=2
python_requires = >=3.6
package_dir = 
    = src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24


[flake8]
max-line-length = 160